[package]
name = "mtg"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[features]
custom = []

[dependencies]
caseless = "*"
derive_more = "*"
num = "*"
regex = "1"
reqwest = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_plain = "*"
topological-sort = "*"
wrapped_enum = "*"
