[package]
name = "mtg"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[features]
custom = []

[dependencies]
caseless = "0"
derive_more = "0"
itertools = "0"
num = "0"
regex = "1"
reqwest = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_plain = "0"
topological-sort = "0"
