[package]
name = "mtg"
version = "0.2.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[features]
custom = []

[dependencies]
caseless = "0.2.1"
derive_more = "0.99"
itertools = "0.8"
lazy_static = "1.0.2"
num = "0.2"
regex = "1"
reqwest = "0.9" #TODO add async support and update to 0.10
serde_json = "1"
serde_plain = "0.3"
topological-sort = "0.1"

[dependencies.serde]
version = "1"
features = ["derive"]
